fix(style): update colors to meet WCAG contrast requirements

--- a/Sprint-3/quote-generator/style.css
+++ b/Sprint-3/quote-generator/style.css
@@ -1,7 +1,7 @@
     body { 
         font-family: Arial, sans-serif;
-        background-color: #ffffffad;
-        color: #ec5707;
+        background-color: #ffffffff;
+        color: #cd4300;
         margin: 0;
         padding: 0;
 
@@ -12,46 +12,33 @@
         text-align: center;
         margin: 20px;
         font-weight: bold;
-        background-color: #ddc48aad;
+        background-color: #f6e6ba;
+        color: #5c2c00; 
         padding: 20px;
         border-radius: 40px;
         
         
     }
+
     #author {
         font-size: 1.2em;
         text-align: center;
         margin: 10px;
+        color: #444; 
     }
+
     #new-quote {
         display: block;
         margin: 20px auto;
         padding: 10px 20px;
-        background-color: #f1b936ad;
-        color: #333;
+        background-color: #ffc72c; 
+        color: #000;
         border: none;
         border-radius: 5px;
         cursor: pointer;
     }
+
     h1 {
         text-align: center;
         margin-top: 20px;
     }
-    .centre {
-        position: fixed;
-        top: 50%;
-        left: 50%;
-        -webkit-transform: translate(-50%, -50%);
-        transform: translate(-50%, -50%);
-    }
-    .new-quote {
-        display: block;
-        margin: 20px auto;
-        padding: 10px 20px;
-        background-color: #f1b936ad;
-        color: #333;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-    }
-    
